--- a/NEW/index.html
+++ b/NEW/index.html
@@ -34,16 +34,34 @@
     </nav>
 
     <section class="Onglets Onglet_Arbre">
-      <div class="Arbre_Tour">
-
-
-      </div>
     </section>
+
+    <section class="Onglets Onglet_Joueurs">
+      <button type="button" name="Joueurs-Appliquer">Appliquer</button>
+    </section>
+
+    <section class="Onglets Onglet_Parametres">
+      <p class="Parametres-Onglet_Nom-Tournois">Le nom du tournois</p>
+      <p class="Parametres-Onglet_Desc-Tournois">Description du tournois</p>
+      <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
+      <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
+      <p>Nombre de joueurs : </p>
+      <input type="number" name="NbJoueur" value="8" class="nbjoueurs">
+      <button type="button" name="Parametres-Appliquer" class="btn_app_parametres">Appliquer</button>
+    </section>
+
 
     <footer class="Pied-Page">
 
     </footer>
   </body>
+
+
+
+  <template id="Template_Arbre_Tour">
+    <div class="Arbre_Tour">
+    </div>
+  </template>
 
   <template id="Template_Bloc-Joueurs">
     <div class="Bloc-Joueurs">
