--- a/NEW/index.html
+++ b/NEW/index.html
@@ -9,6 +9,12 @@
   </head>
 
   <body class="Page">
+    <section class="Acceuil">
+      <div class="">
+
+      </div>
+    </section>
+
     <header class="Entete">
         <div class="Entete_Infos-Txt">
           <h1 class="Entete_Titre-Tournois">TITRE DU TOURNOIS !!</h1>
