--- a/NEW/index.html
+++ b/NEW/index.html
@@ -71,7 +71,7 @@
         <option value="RL">Rocket League</option>
         <option value="SC2">StarCraft 2</option>
       </select>
-      <input type="number" value="0" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
+      <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
       <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
     </section>
 
@@ -98,6 +98,9 @@
     </div>
   </template>
 
+  <template id="Template_">
+
+  </template>
   <template id="Template_Joueur">
     <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo">
   </template>
