--- a/NEW/index.html
+++ b/NEW/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body class="Page">
-    <section class="Acceuil">
+    <!-- <section class="Acceuil">
       <div class="">
 
-      </div>
+      </div> -->
     </section>
 
     <header class="Entete">
