--- a/NEW/index.html
+++ b/NEW/index.html
@@ -113,7 +113,7 @@
     </div>
   </template>
 
-  <template id="Template_Bloc-Joueurs">
+  <template id="Template_Bloc-Joueurs_Joueur-Top">
     <div class="Bloc-Joueurs">
       <div class="Bloc-Joueurs_Infos">
         <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
@@ -123,6 +123,26 @@
     </div>
   </template>
 
+  <template id="Template_Bloc-Joueurs_Joueur-Mid">
+    <div class="Connecteur-Joueur"></div>
+    <div class="Bloc-Joueurs">
+      <div class="Bloc-Joueurs_Infos">
+        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
+        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+      </div>
+      <div class="Connecteur-Joueur"></div>
+    </div>
+  </template>
+
+  <template id="Template_Bloc-Joueurs_Joueur-Bot">
+    <div class="Connecteur-Joueur"></div>
+    <div class="Bloc-Joueurs">
+      <div class="Bloc-Joueurs_Infos">
+        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
+        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+      </div>
+    </div>
+  </template>
 
   <template id="Template_Joueur">
     <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo">
