--- a/index.html
+++ b/index.html
@@ -116,30 +116,29 @@
   <template id="Template_Bloc-Joueurs_Joueur-Top">
     <div class="Bloc-Joueurs">
       <div class="Bloc-Joueurs_Infos">
-        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
-        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+        <input type="text" placeholder="Pseudo du Joueur" class="Bloc-Joueurs_Infos_Pseudo">
+        <input type="number" placeholder="0" class="Score-Joueurs">
       </div>
       <div class="Connecteur-Joueur"></div>
     </div>
   </template>
 
   <template id="Template_Bloc-Joueurs_Joueur-Mid">
-    <div class="Connecteur-Joueur"></div>
     <div class="Bloc-Joueurs">
+      <div class="Connecteur-Joueur"></div>
       <div class="Bloc-Joueurs_Infos">
-        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
-        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+        <input type="text" placeholder="Peusdo du Joueur" class="Bloc-Joueurs_Infos_Pseudo">
+        <input type="number" placeholder="0" class="Score-Joueurs">
       </div>
       <div class="Connecteur-Joueur"></div>
     </div>
   </template>
 
   <template id="Template_Bloc-Joueurs_Joueur-Bot">
-    <div class="Connecteur-Joueur"></div>
     <div class="Bloc-Joueurs">
+      <div class="Connecteur-Joueur"></div>
       <div class="Bloc-Joueurs_Infos">
-        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
-        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+        <input type="text" placeholder="Pseudo du Joueur" class="Bloc-Joueurs_Infos_Pseudo">
       </div>
     </div>
   </template>
