Onglet Joueur JS
+ Adaptation de la classe du bouton pour appliquer les pseudos des joueurs pour le js

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="Onglets Onglet_Joueurs">
       <div class="Onglets_Joueurs_Liste">
 
-        <button type="button" name="Joueurs-Appliquer">Appliquer</button>
+        <button type="button" name="Onglet_Joueurs_Appliquer">Appliquer</button>
       </div>
 
       <div class="Onglets_Joueurs_Carte">
