Style bloc joueur et Appliquer infos
+ Début de style sur les inputs des bloc joueurs
+ Ajout d'un bouton pour appliquer les informations de l'arbre

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </nav>
 
     <section class="Onglets Onglet_Arbre">
+      <input type="button" value="Appliquer" class="Onglet_Arbre_Appliquer">
     </section>
 
     <section class="Onglets Onglet_Joueurs">
@@ -117,7 +118,7 @@
     <div class="Bloc-Joueurs">
       <div class="Bloc-Joueurs_Infos">
         <input type="text" placeholder="Pseudo du Joueur" class="Bloc-Joueurs_Infos_Pseudo">
-        <input type="number" placeholder="0" class="Score-Joueurs">
+        <input type="number" placeholder="0" class="Bloc-Joueurs_Infos_Score">
       </div>
       <div class="Connecteur-Joueur"></div>
     </div>
@@ -128,7 +129,7 @@
       <div class="Connecteur-Joueur"></div>
       <div class="Bloc-Joueurs_Infos">
         <input type="text" placeholder="Peusdo du Joueur" class="Bloc-Joueurs_Infos_Pseudo">
-        <input type="number" placeholder="0" class="Score-Joueurs">
+        <input type="number" placeholder="0" class="Bloc-Joueurs_Infos_Score">
       </div>
       <div class="Connecteur-Joueur"></div>
     </div>
