--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="Entete_Infos_Desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-        <img src="Contenu/Logos/Logos_Jeux/logo_OW.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_OW.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
 
     <nav class="Nav">
@@ -79,17 +79,16 @@
 
     <section class="Onglets Onglet_Parametres">
       <input type="text" placeholder="Nom du Tournois" class="Parametres-Input Onglet_Parametres_Nom-Tournois" required>
-      <input type="text" placeholder="Hébergeur" class="Parametres-Input Onglet_Parametres_Nom-Hote" required>
-      <select class="Parametres-Input Onglet_Parametres_Jeux" size="1" required>
-        <option hidden>Jeux</option>
-        <option value="CSGO">Counter-Strike GO</option>
-        <option value="HOTS">Heroes Of the Storm</option>
-        <option value="HS">Hearthstone</option>
-        <option value="LOL">League Of Legends</option>
-        <option value="OW">Overwatch</option>
-        <option value="RL">Rocket League</option>
-        <option value="SC2">StarCraft 2</option>
-      </select>
+      <input type="text" placeholder="Description du Tournois" class="Parametres-Input Onglet_Parametres_Desc-Tournois" required>
+      <div class="Onglet_Parametres_Jeux">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_CS.png" alt="Counter-Strike : Global Offensive" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_HOTS.png" alt="Heroes Of the Storm" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_HS.png" alt="Hearthstone" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_LOL.png" alt="League Of Legends" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_OW.png" alt="Overwatch" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_RL.png" alt="Rocket League" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_SC2.png" alt="StarCraft 2" class="Onglet_Parametres_Jeux-Logo">
+      </div>
       <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
       <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
     </section>
