Template Interconnecteurs JS
+ Séparation des templates

--- a/index.html
+++ b/index.html
@@ -106,10 +106,13 @@
     </div>
   </template>
 
-  <template id="Template_Arbre_InterConnecteur">
+  <template id="Template_Arbre_InterConnecteurs">
     <div class="Arbre_Interconnecteurs">
-      <div class="InterConnecteur">
-      </div>
+    </div>
+  </template>
+
+  <template id="Template_Arbre_InterConnecteurs_InterConnecteur">
+    <div class="InterConnecteur">
     </div>
   </template>
 
