--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
     <footer class="Pied-Page">
-
+      <p>Copyright : Julien SEIXAS (HTML & CSS) & Cédric LESUEUR (JS)</p>
     </footer>
   </body>
 
