REGLAGE DE PROBLEM C::::

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <img src="Contenu/Logos/Logos_Jeux/Logo_HOTS.png" alt="Heroes Of the Storm" class="Onglet_Parametres_Jeux-Logo">
         <img src="Contenu/Logos/Logos_Jeux/Logo_HS.png" alt="Hearthstone" class="Onglet_Parametres_Jeux-Logo">
         <img src="Contenu/Logos/Logos_Jeux/Logo_LOL.png" alt="League Of Legends" class="Onglet_Parametres_Jeux-Logo">
-        <img src="Contenu/Logos/Logos_Jeux/Logo_OW.png" alt="Overwatch" class="Onglet_Parametres_Jeux-Logo">
+        <img src="Contenu/Logos/Logos_Jeux/Logo_OW.png" alt="Overwatch" class="Onglet_Parametres_Jeux-Logo Logo-Selectionne">
         <img src="Contenu/Logos/Logos_Jeux/Logo_RL.png" alt="Rocket League" class="Onglet_Parametres_Jeux-Logo">
         <img src="Contenu/Logos/Logos_Jeux/Logo_SC2.png" alt="StarCraft 2" class="Onglet_Parametres_Jeux-Logo">
       </div>
