--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
 
       <div class="Accueil_Fenetre Fenetre-2">
         <input type="text" placeholder="Nom du Tournois" class="Parametres-Input Onglet_Parametres_Nom-Tournois" required>
-        <input type="text" placeholder="Hébergeur" class="Parametres-Input Onglet_Parametres_Nom-Hote" required>
-        <select class="Parametres-Input Onglet_Parametres_Jeux" size="1" required>
-          <option hidden>Jeux</option>
-          <option value="CSGO">Counter-Strike GO</option>
-          <option value="HOTS">Heroes Of the Storm</option>
-          <option value="HS">Hearthstone</option>
-          <option value="LOL">League Of Legends</option>
-          <option value="OW">Overwatch</option>
-          <option value="RL">Rocket League</option>
-          <option value="SC2">StarCraft 2</option>
-        </select>
+        <input type="text" placeholder="Description du Tournois" class="Parametres-Input Onglet_Parametres_Desc-Tournois" required>
+        <div class="Onglet_Parametres_Jeux">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_CS.png" alt="Counter-Strike : Global Offensive" class="Onglet_Parametres_Jeux-Logo Logo_CSGO">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_HOTS.png" alt="Heroes Of the Storm" class="Onglet_Parametres_Jeux-Logo Logo_HOTS">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_HS.png" alt="Hearthstone" class="Onglet_Parametres_Jeux-Logo Logo_HS">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_LOL.png" alt="League Of Legends" class="Onglet_Parametres_Jeux-Logo Logo_LOL">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_OW.png" alt="Overwatch" class="Onglet_Parametres_Jeux-Logo Logo_OW Logo-Selectionne">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_RL.png" alt="Rocket League" class="Onglet_Parametres_Jeux-Logo Logo_RL">
+          <img src="Contenu/Logos/Logos_Jeux/Logo_SC2.png" alt="StarCraft 2" class="Onglet_Parametres_Jeux-Logo Logo_SC2">
+        </div>
         <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
         <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
-
       </div>
     </section> -->
 
@@ -63,17 +61,16 @@
 
     <section class="Onglets Onglet_Joueurs">
       <div class="Onglets_Joueurs_Liste">
-
         <button type="button" class="Onglet_Joueurs_Appliquer">Appliquer</button>
       </div>
-
+      <div class="Onglet_Joueurs_Separateur"></div>
       <div class="Onglets_Joueurs_Carte">
-        <img src="" alt="">
-        <p>Pseudo</p>
-        <p>Nom</p>
-        <p>Prenom</p>
-        <p>Nombre de match gagnés</p> <span>0</span>
-        <p>Nombre de match perdus</p> <span>0</span>
+        <label class="Onglets_Joueurs_Carte_Pseudo-Label">Pseudo : <input type="text" class="Onglets_Joueurs_Carte_Input Onglets_Joueurs_Carte_Pseudo" disabled></label>
+        <!-- <label>Âge : <input type="text" class="Onglets_Joueurs_Carte_Age" disabled></label>
+        <label>Temps de Jeux : <input type="text" class="Onglets_Joueurs_Carte_Tmp-Jeu" disabled></label>
+        <label>Niveau : <input type="text" class="Onglets_Joueurs_Carte_Nivo" disabled></label> -->
+        <label>Victoires : <input type="text" class="Onglets_Joueurs_Carte_Input Onglets_Joueurs_Carte_Victoire" disabled></label>
+        <label class="Onglets_Joueurs_Carte_Defaite-Label">Défaites : <input type="text" class="Onglets_Joueurs_Carte_Input Onglets_Joueurs_Carte_Defaite" disabled></label>
       </div>
     </section>
 
@@ -95,7 +92,7 @@
 
 
     <footer class="Pied-Page">
-      <p>Copyright : Julien SEIXAS (HTML & CSS) & Cédric LESUEUR (JS)</p>
+      <p>Copyright (c) 2017 Copyright tous droits réservés à Julien SEIXAS (HTML & CSS) & Cédric LESUEUR (JS)</p>
     </footer>
   </body>
 
