décom html accueil

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="Page">
-    <!-- <section class="Accueil">
+    <section class="Accueil">
       <div class="Accueil_Fenetre Fenetre-1">
         <h2>Bienven</h2>
       </div>
@@ -29,7 +29,7 @@
         <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
         <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
       </div>
-    </section> -->
+    </section>
 
     <header class="Entete">
         <div class="Entete_Infos-Txt">
