résolv bug html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <body class="Page">
     <section class="Accueil">
       <div class="Accueil_Fenetre Fenetre-1">
-        <h2>Bienven</h2>
+        <h2 class="Fenetre-1_Titre">Bienvenue</h2>
+        <input type="button" value="Créer un Tournois" class="Fenetre-1_Btn">
+        <input type="button" value="Historique" class="Fenetre-1_Btn" disabled title="Prochainement disponible !">
+      </div>
       </div>
 
       <div class="Accueil_Fenetre Fenetre-2">
