--- a/index.html
+++ b/index.html
@@ -147,6 +147,6 @@
   </template>
 
   <template id="Template_Joueur">
-    <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo">
+    <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo" title="Entrer le Pseudo du Joueur">
   </template>
 </html>
