--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="Page">
-    <section class="Accueil">
+    <!-- <section class="Accueil">
       <div class="Accueil_Fenetre Fenetre-1">
         <h2 class="Fenetre-1_Titre">Bienvenue</h2>
         <input type="button" value="Créer un Tournois" class="Fenetre-1_Btn">
@@ -32,7 +32,7 @@
         <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
         <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
       </div>
-    </section>
+    </section> -->
 
     <header class="Entete">
         <div class="Entete_Infos-Txt">
@@ -147,6 +147,6 @@
   </template>
 
   <template id="Template_Joueur">
-    <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo">
+    <input type="text" placeholder="Pseudo" class="Onglets_Joueurs_Liste_Pseudo" title="Entrer le Pseudo du Joueur">
   </template>
 </html>
