--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="Page">
-    <!-- <section class="Accueil">
+    <section class="Accueil">
       <div class="Accueil_Fenetre Fenetre-1">
         <h2 class="Fenetre-1_Titre">Bienvenue</h2>
         <input type="button" value="Créer un Tournois" class="Fenetre-1_Btn">
@@ -30,9 +30,9 @@
           <img src="Contenu/Logos/Logos_Jeux/Logo_SC2.png" alt="StarCraft 2" class="Onglet_Parametres_Jeux-Logo Logo_SC2">
         </div>
         <input type="number" value="3" min="3" max="256" required class="Parametres-Input Onglet_Parametres_Nb-Joueurs">
-        <input type="button" value="Appliquer" class="Parametres-Input Onglet_Parametres_Appliquer">
+        <input type="button" value="Appliquer" class="Parametres-Input Parametres-Input Onglet_Accueil_Appliquer">
       </div>
-    </section> -->
+    </section>
 
     <header class="Entete">
         <div class="Entete_Infos-Txt">
